// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdentifierContainer Tests should create IdentifierContainer element when user exists in transaction context 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "identifier": "transactionUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should default to existing IdentifierContainer even when user exists in transaction context 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but NextStep is "admin-consent" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but NextStep is "identify" 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but features.showIdentifier = false 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but identifier is empty 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should not create IdentifierContainer element when one already exists in schema 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
